# Ai_Crawler

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
backend/: .env  DATABASE.md  api.py  classify.py  main.py  pyproject.toml
backend/core/: base.py  database.py
backend/spiders/: ithome.py  pengpai.py  souhu.py  tengxuntiyu.py  tengxunxinwen.py  wangyi.py  xinlang.py  zhongguoribao.py
src/: App.vue  main.js  style.css
src/components/: NewTaskModal.vue  Sidebar.vue  Toast.vue
src/utils/: constants.js  formatDate.js
src/views/: Dashboard.vue  Help.vue  Results.vue  Rules.vue  Schedule.vue  Tasks.vue
